--- a/gb/13/12/14/n4034184.md
+++ b/gb/13/12/14/n4034184.md
@@ -1,24 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yexsyy329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yexsyy329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yexsyy329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yexsyy329/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yexsyy329/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yexsyy329/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yexsyy329/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新北专用垃圾袋  2合1更环保</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元12月14日报导】（中央社记者王鸿国新北市14日电）新北市政府与全联福利中心合作推出的新购物塑胶袋，不仅可当<ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%A2%8B.md#1">购物袋</a>，也可作为新北专用<ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE%E8%A2%8B.md#1">垃圾袋</a>，2袋合1更环保。</p>
-<p>全联新<ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%A2%8B.md#1">购物袋</a>今天开卖，新北市副市长侯友宜、环保局长刘和然及全联董事长林敏雄一起主持启动仪式，“全联先生”现场演出行动剧，展现省1袋更环保的主旨，卖场内首次买到新购物袋的民众也对此表示肯定。</p>
+<p>【大纪元12月14日报导】（中央社记者王鸿国新北市14日电）新北市政府与全联福利中心合作推出的新购物塑胶袋，不仅可当<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%A2%8B.md#1">购物袋</a>，也可作为新北专用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE%E8%A2%8B.md#1">垃圾袋</a>，2袋合1更环保。</p>
+<p>全联新<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%AD%E7%89%A9%E8%A2%8B.md#1">购物袋</a>今天开卖，新北市副市长侯友宜、环保局长刘和然及全联董事长林敏雄一起主持启动仪式，“全联先生”现场演出行动剧，展现省1袋更环保的主旨，卖场内首次买到新购物袋的民众也对此表示肯定。</p>
 <p>侯友宜表示，新北市每年消费购物袋用量约3600万个，若能为了减少1个塑胶袋，全年就可减少上万个塑胶袋，不仅垃圾减量更环保，民众也能省钱。</p>
 <p>林敏雄表示，以全联在新北每月约售出35万个购物袋，若全面使用两用袋，一年将减少420万个塑胶袋，为响应此环保政策，即日起至民国103年1月13日止，民众单笔消费满新台币1200元就赠送两用袋1个，限量5万个。</p>
-<p>环保局表示，依照新北市垃圾清除处理费率每公升0.4元计算，一个15公升全联新购物袋，零售单价为6元，和民众购买一般专用<ahref="https://github.com/yexsyy329/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE%E8%A2%8B.md#1">垃圾袋</a>的价钱相同，可为民众省下原本买购物袋的钱。</p>
+<p>环保局表示，依照新北市垃圾清除处理费率每公升0.4元计算，一个15公升全联新购物袋，零售单价为6元，和民众购买一般专用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE%E8%A2%8B.md#1">垃圾袋</a>的价钱相同，可为民众省下原本买购物袋的钱。</p>
 <p>环保局指出，结合购物袋及专用垃圾袋双重功能的两用购物袋，新北市除了和全联合作试办外，爱买、家乐福也拟加入实施，除提供民众更多选择，也让环保精神落实生活中。</p>
-<figure id="attachment_5674733" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2013/12/1312140225142188-600x427.jpg" alt="新北市政府与全联福利中心14日合作推出的新购物塑胶
-袋，不仅可当购物袋，也可作为新北专用垃圾袋。全联
-先生（右）演出行动剧，展现省1袋更环保的主旨。
-(中央社)" title="新北市政府与全联福利中心14日合作推出的新购物塑胶
-袋，不仅可当购物袋，也可作为新北专用垃圾袋。全联
-先生（右）演出行动剧，展现省1袋更环保的主旨。
-(中央社)" width="600" b="427"
-	class="size-large wp-image-5674733" /></a><figcaption class="wp-caption-text">新北市政府与全联福利中心14日合作推出的新购物塑胶<br />
+<figure id="attachment_5674733" aria-describedby="caption-attachment-5674733" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2013/12/1312140225142188-600x427.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5674733" class="wp-caption-text">新北市政府与全联福利中心14日合作推出的新购物塑胶<br />
 袋，不仅可当购物袋，也可作为新北专用垃圾袋。全联<br />
 先生（右）演出行动剧，展现省1袋更环保的主旨。<br />
 (中央社)</figcaption></figure>
@@ -27,48 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/2/14/n3801039.md#1">回收天灯纸  兑换专用垃圾袋</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/2/19/n3803849.md#1">北市垃圾袋费率  调降2成</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/2/19/n3803959.md#1">环保有成  北市垃圾袋打8折</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/2/19/n3804311.md#1">北市垃圾袋降价  新北不跟进</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/2/19/n3804343.md#1">台13年首度降价  郝龙斌：3/1开始垃圾袋打八折</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/10/15/n3986813.md#1">顾弱势  北市将发垃圾袋抵价券</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/10/25/n3995270.md#1">购物袋当垃圾袋  新北年底上路</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/10/30/n3998461.md#1">悠游卡买垃圾袋  北市年底有谱</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/11/22/n4017085.md#1">新北专用垃圾袋 超商可零购</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/11/22/n4017483.md#1">台新北市购物垃圾袋 超商也加入</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/14/n3801039.md#1">回收天灯纸  兑换专用垃圾袋</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/19/n3803849.md#1">北市垃圾袋费率  调降2成</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/19/n3803959.md#1">环保有成  北市垃圾袋打8折</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/19/n3804311.md#1">北市垃圾袋降价  新北不跟进</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/2/19/n3804343.md#1">台13年首度降价  郝龙斌：3/1开始垃圾袋打八折</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/10/15/n3986813.md#1">顾弱势  北市将发垃圾袋抵价券</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/10/25/n3995270.md#1">购物袋当垃圾袋  新北年底上路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/10/30/n3998461.md#1">悠游卡买垃圾袋  北市年底有谱</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/22/n4017085.md#1">新北专用垃圾袋 超商可零购</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/22/n4017483.md#1">台新北市购物垃圾袋 超商也加入</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/11/n9829932.md#1" target="_blank">杨宁：邓小平妻兄服毒自尽 两连襟被迫害死</a></li><li><a href="https://github.com/yexsyy329/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/25/n9992657.md#1" target="_blank">林辉：贾宝玉林黛玉扮演者曾被叫“阿飞”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/13/n12546366.md#1">淫乱 冤死人转生做牛 名字记号铁证现牛身</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572207.md#1">【新闻大家谈】拜登过渡 川普胜算几何？</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/25/n12573524.md#1">【拍案惊奇】阻川普连任 揭秘全球大重构计划</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572484.md#1">【重播】川普和夫人举行感恩节火鸡赦免仪式</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568283.md#1">朱利安尼发声明：鲍威尔不是川普团队律师</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568733.md#1">田云：普京不承认拜登当选 点明三个要害</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12569578.md#1">【新闻大家谈】鲍威尔独立 川普变阵 大戏开演</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567936.md#1">54岁刘嘉玲饰20多岁女生 扎双马尾造型引热议</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/22/n12567816.md#1">孟美岐搭机找不到座位 原来是私生饭做了手脚</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12570274.md#1">曾获叶德娴帮还巨债 刘德华承诺养她一辈子</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12572570.md#1">疑踩中共禁区 张艺谋《一秒钟》遭金鸡奖撤映</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12570674.md#1">被误认嚼口香糖耍大牌 范丞丞曝光真相引爆笑</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/18/n12557602.md#1">10秒找到东西 丰田汽车高效率 违规恐挨骂</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12571000.md#1">大火中救4人 俄罗斯怀孕母狗自己却被烧伤</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/24/n12571675.md#1">解密画面：美军F-35战机试投B61-12核弹</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568624.md#1">美国7旬老翁跳入水中 扳开鳄鱼嘴巴救小狗</a></li>
-<li><a href="https://github.com/yexsyy329/djy/blob/master/gb/20/11/23/n12568927.md#1">马斯克：火星地球化前 移民先住玻璃圆顶内</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yexsyy329/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yexsyy329/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/12/14/n4034184.htm">新北专用垃圾袋  2合1更环保</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/12/14/n4034184.htm">新北专用垃圾袋  2合1更环保</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yexsyy329/djy/blob/master/gb/13/12/14/n4034184.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yexsyy329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yexsyy329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yexsyy329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yexsyy329/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/13/12/14/n4034184.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
